# ha-flatastic

./: .gitignore  CHANGELOG.md  Check API TEST.bru  Check Task.bru  LICENSE  README.md  RELEASE.md  Tasks.bru  bruno.json  collection.bru  eslint.config.js  info.md  package-lock.json  package.json  pyproject.toml  release.sh  vitest.config.js
.github/workflows/: ci.yml  release.yml
custom_components/flatastic/: CARD_INSTALLATION.md  README.md  __init__.py  cleanup_service.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  sensor.py  services.yaml  strings.json
custom_components/flatastic/examples/: cleanup_automation.yaml  dashboard-config.yaml
custom_components/flatastic/translations/: de.json  en.json
custom_components/flatastic/www/: flatastic-chores-card.js
tests/: conftest.py  test_const.py  test_coordinator.py  test_manifest.py  test_sensor.py
tests/js/: flatastic-chores-card.test.js
